# africinnovate-lms

./: .eslint.config.js  .eslintrc.config.js  .eslintrc.js  .gitignore  CONTRIBUTING.md  FAIL.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  coverage.yml  lint_format.yml  test.yml
apps/api/: Cargo.toml  Dockerfile  docker-compose.yml
apps/api/migration/: Cargo.toml
apps/api/migration/src/: lib.rs  m20220101_000001_create_users.rs  main.rs
apps/api/src/: config.rs  error.rs
apps/api/src/handlers/: users.rs
apps/api/src/models/: users.rs
apps/api/src/routes/: users.rs
apps/frontend/: .eslintignore  .prettierignore  .prettierrc  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
apps/frontend/src/__tests__/unit/pages/: Home.test.tsx
apps/frontend/src/__tests__/unit/utils/: formatDate.test.ts
apps/frontend/src/app/: StoreProvider.tsx  layout.tsx  page.tsx
apps/frontend/src/app/Components/Card/: index.tsx
apps/frontend/src/app/Components/ChartSection/: index.tsx
apps/frontend/src/app/Components/Dashboard/: index.tsx
apps/frontend/src/app/Components/Header/: index.tsx
apps/frontend/src/app/Components/Sidebar/: index.tsx
apps/frontend/src/app/Dashboard/: page.tsx
apps/frontend/src/app/Tutor/: page.tsx
apps/frontend/src/app/lib/: hooks.ts  store.ts
apps/frontend/src/app/lib/features/theme/: themeSlice.ts
apps/frontend/src/app/lib/utils/: formatDate.ts
