[package]
name = "my-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.6.20"         # Downgraded to ensure compatibility
tokio = { version = "1.32.0", features = ["full"] }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0.48"
anyhow = "1.0.75"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tower = "0.4.13"
hyper = "0.14.27"       # Explicit hyper version