[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { version = "0.11", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"

[dependencies.sea-orm]
version = "0.11"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "macros"
]